Add export default template

--- a/html/makefile
+++ b/html/makefile
@@ -9,3 +9,6 @@ md-to-html:
 		page.md \
 		-o page.html
 
+export-template-html:
+	# https://pandoc.org/MANUAL.html#option--print-default-template
+	pandoc -D html > /tmp/template-default.html
