Add open to firefox in makefile

--- a/html/makefile
+++ b/html/makefile
@@ -9,6 +9,12 @@ md-to-html:
 		page.md \
 		-o /tmp/page.html
 
+open-html:
+	firefox /tmp/page.html
+
+all: md-to-html open-html
+
+
 export-template-html:
 	# https://pandoc.org/MANUAL.html#option--print-default-template
 	pandoc -D html > /tmp/template-default.html
