--- a/html/makefile
+++ b/html/makefile
@@ -1,16 +1,27 @@
 md-to-html:
-	cp index.css /tmp/
+	rm -rf /tmp/src-html
+	mkdir -p /tmp/src-html/other-pages
+	cp src/styles.css /tmp/src-html
+	cp -r pandoc-config/ /tmp/
 	pandoc \
-		--css=index.css \
+		--css=/tmp/src-html/styles.css \
 		--standalone \
-		--template=pandoc-config/template.html \
+		--template=/tmp/pandoc-config/template.html \
 		-t html \
-		pandoc-config/metadata.yml \
-		page.md \
-		-o /tmp/page.html
+		/tmp/pandoc-config/metadata.yml \
+		src/page.md \
+		-o /tmp/src-html/page.html
+	pandoc \
+		--css=/tmp/src-html/styles.css \
+		--standalone \
+		--template=/tmp/pandoc-config/template.html \
+		-t html \
+		/tmp/pandoc-config/metadata.yml \
+		src/other-pages/page-2.md \
+		-o /tmp/src-html/other-pages/page-2.html
 
 open-html:
-	firefox /tmp/page.html
+	firefox /tmp/src-html/page.html
 
 all: md-to-html open-html
 
