Refactor move pandoc order to script

--- a/html/makefile
+++ b/html/makefile
@@ -3,22 +3,8 @@ md-to-html:
 	mkdir -p /tmp/src-html/other-pages
 	cp src/styles.css /tmp/src-html
 	cp -r pandoc-config/ /tmp/
-	pandoc \
-		--css=/tmp/src-html/styles.css \
-		--standalone \
-		--template=/tmp/pandoc-config/template.html \
-		-t html \
-		/tmp/pandoc-config/metadata.yml \
-		src/page.md \
-		-o /tmp/src-html/page.html
-	pandoc \
-		--css=/tmp/src-html/styles.css \
-		--standalone \
-		--template=/tmp/pandoc-config/template.html \
-		-t html \
-		/tmp/pandoc-config/metadata.yml \
-		src/other-pages/page-2.md \
-		-o /tmp/src-html/other-pages/page-2.html
+	./run-pandoc src/page.md /tmp/src-html/page.html
+	./run-pandoc src/other-pages/page-2.md /tmp/src-html/other-pages/page-2.html
 
 open-html:
 	firefox /tmp/src-html/page.html
