Change destination pathname

--- a/html/makefile
+++ b/html/makefile
@@ -1,10 +1,11 @@
-HTML_DESTINATION_PATHNAME:=/tmp/src-html
+DESTINATION_PATHNAME:=/tmp/web
+HTML_DESTINATION_PATHNAME:=$(DESTINATION_PATHNAME)/html
 
 md-to-html:
-	rm -rf $(HTML_DESTINATION_PATHNAME)
+	rm -rf $(DESTINATION_PATHNAME)
 	mkdir -p $(HTML_DESTINATION_PATHNAME)/other-pages
 	cp src/styles.css $(HTML_DESTINATION_PATHNAME)
-	cp -r pandoc-config/ /tmp/
+	cp -r pandoc-config/ $(DESTINATION_PATHNAME)/
 	./run-pandoc src/page.md $(HTML_DESTINATION_PATHNAME)/page.html
 	./run-pandoc src/other-pages/page-2.md $(HTML_DESTINATION_PATHNAME)/other-pages/page-2.html
 
