All bash variables as input

--- a/html/makefile
+++ b/html/makefile
@@ -9,9 +9,9 @@ md-to-html:
 	mkdir $(PANDOC_CONFIG_DESTINATION_PATHNAME)
 	cp src/styles.css $(HTML_DESTINATION_PATHNAME)/
 	cp pandoc-config/* $(PANDOC_CONFIG_DESTINATION_PATHNAME)/
-	./run-pandoc src/page.md page.html $(HTML_DESTINATION_PATHNAME) $(PANDOC_CONFIG_DESTINATION_PATHNAME) $(HTML_DESTINATION_PATHNAME)/styles.css $(PANDOC_CONFIG_DESTINATION_PATHNAME)/template.html $(PANDOC_CONFIG_DESTINATION_PATHNAME)/metadata.yml
+	./run-pandoc src/page.md $(HTML_DESTINATION_PATHNAME)/page.html $(HTML_DESTINATION_PATHNAME)/styles.css $(PANDOC_CONFIG_DESTINATION_PATHNAME)/template.html $(PANDOC_CONFIG_DESTINATION_PATHNAME)/metadata.yml
 	mkdir $(HTML_DESTINATION_PATHNAME)/other-pages
-	./run-pandoc src/other-pages/page-2.md other-pages/page-2.html $(HTML_DESTINATION_PATHNAME) $(PANDOC_CONFIG_DESTINATION_PATHNAME) $(HTML_DESTINATION_PATHNAME)/styles.css $(PANDOC_CONFIG_DESTINATION_PATHNAME)/template.html $(PANDOC_CONFIG_DESTINATION_PATHNAME)/metadata.yml
+	./run-pandoc src/other-pages/page-2.md $(HTML_DESTINATION_PATHNAME)/other-pages/page-2.html $(HTML_DESTINATION_PATHNAME)/styles.css $(PANDOC_CONFIG_DESTINATION_PATHNAME)/template.html $(PANDOC_CONFIG_DESTINATION_PATHNAME)/metadata.yml
 
 open-html:
 	firefox $(HTML_DESTINATION_PATHNAME)/page.html
