Refactor makefile extract variables with common config files

--- a/html/makefile
+++ b/html/makefile
@@ -1,6 +1,9 @@
 DESTINATION_PATHNAME:=/tmp/web
 HTML_DESTINATION_PATHNAME:=$(DESTINATION_PATHNAME)/html
+HTML_CSS_DESTINATION_PATHNAME:=$(HTML_DESTINATION_PATHNAME)/styles.css
 PANDOC_CONFIG_DESTINATION_PATHNAME:=$(DESTINATION_PATHNAME)/pandoc-config
+PANDOC_TEMPLATE_DESTINATION_PATHNAME:=$(PANDOC_CONFIG_DESTINATION_PATHNAME)/template.html
+PANDOC_METADATA_DESTINATION_PATHNAME:=$(PANDOC_CONFIG_DESTINATION_PATHNAME)/metadata.yml
 
 md-to-html:
 	rm -rf $(DESTINATION_PATHNAME)
@@ -9,9 +12,9 @@ md-to-html:
 	mkdir $(PANDOC_CONFIG_DESTINATION_PATHNAME)
 	cp src/styles.css $(HTML_DESTINATION_PATHNAME)/
 	cp pandoc-config/* $(PANDOC_CONFIG_DESTINATION_PATHNAME)/
-	./run-pandoc src/page.md $(HTML_DESTINATION_PATHNAME)/page.html $(HTML_DESTINATION_PATHNAME)/styles.css $(PANDOC_CONFIG_DESTINATION_PATHNAME)/template.html $(PANDOC_CONFIG_DESTINATION_PATHNAME)/metadata.yml
+	./run-pandoc src/page.md $(HTML_DESTINATION_PATHNAME)/page.html $(HTML_CSS_DESTINATION_PATHNAME) $(PANDOC_TEMPLATE_DESTINATION_PATHNAME) $(PANDOC_METADATA_DESTINATION_PATHNAME)
 	mkdir $(HTML_DESTINATION_PATHNAME)/other-pages
-	./run-pandoc src/other-pages/page-2.md $(HTML_DESTINATION_PATHNAME)/other-pages/page-2.html $(HTML_DESTINATION_PATHNAME)/styles.css $(PANDOC_CONFIG_DESTINATION_PATHNAME)/template.html $(PANDOC_CONFIG_DESTINATION_PATHNAME)/metadata.yml
+	./run-pandoc src/other-pages/page-2.md $(HTML_DESTINATION_PATHNAME)/other-pages/page-2.html $(HTML_CSS_DESTINATION_PATHNAME) $(PANDOC_TEMPLATE_DESTINATION_PATHNAME) $(PANDOC_METADATA_DESTINATION_PATHNAME)
 
 open-html:
 	firefox $(HTML_DESTINATION_PATHNAME)/page.html
